--- a/.gitmodules
+++ b/.gitmodules
@@ -6,16 +6,13 @@
 	url = http://github.com/nex3/perspective-el.git
 [submodule "vendor/rvm.el"]
 	path = vendor/rvm.el
-	url = git@github.com:senny/rvm.el.git
+	url = https://github.com/senny/rvm.el.git
 [submodule "vendor/rspec-mode"]
 	path = vendor/rspec-mode
 	url = http://github.com/pezra/rspec-mode.git
-[submodule "vendor/theme-roller"]
-	path = vendor/theme-roller
-	url = git@github.com:senny/emacs-theme-roller.git
 [submodule "vendor/theme-roller.el"]
 	path = vendor/theme-roller.el
-	url = git@github.com:senny/theme-roller.el.git
+	url = https://github.com/senny/theme-roller.el.git
 [submodule "vendor/cucumber.el"]
 	path = vendor/cucumber.el
 	url = http://github.com/michaelklishin/cucumber.el.git
